Update openapi spec, split DTO and front end view of org contact
